syntax = "proto3";
package secret.cron;

import "gogoproto/gogo.proto";
import "secret/cron/params.proto";
import "secret/cron/schedule.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/scrtlabs/SecretNetwork/x/cron/types";

// Defines the cron module's genesis state.
message GenesisState {
  repeated Schedule scheduleList = 2 [(gogoproto.nullable) = false];
  Params params = 1 [(gogoproto.nullable) = false];
  // this line is used by starport scaffolding # genesis/proto/state
}
